# flappy_bird_rs

./: Cargo.toml
src/: game.rs  game_over.rs  main.rs
src/components/: bird.rs  menu.rs  mod.rs  pipes.rs
