[package]
name = "flappy_bird"
version = "0.1.0"
edition = "2024"

# [profile.release]
# codegen-units = 1
# lto = "thin"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.17.2"
rand = "0.9.2"
